--- a/prisma.yml
+++ b/prisma.yml
@@ -1,4 +1,5 @@
 #endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: https://alsob-1cd2f05dbc.herokuapp.com/backend/dev
 endpoint: https://alsob-1cd2f05dbc.herokuapp.com/backend/dev
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
