--- a/prisma.yml
+++ b/prisma.yml
@@ -1,6 +1,4 @@
-#endpoint: ${env:PRISMA_ENDPOINT}
-#endpoint: https://journal-fd4c9495b8.herokuapp.com/backend/prod
-endpoint: https://alsob-1cd2f05dbc.herokuapp.com/backend/dev
+endpoint: ${env:PRISMA_ENDPOINT}
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
 hooks:
