--- a/prisma.yml
+++ b/prisma.yml
@@ -5,6 +5,8 @@
 #endpoint: https://journal-6e2fd84644.herokuapp.com/backend/dev
 #endpoint: https://journal-6e2fd84644.herokuapp.com/backend/dev
 #endpoint: https://journal-aleks-tech-2ffee88625.herokuapp.com/backend/dev
+#endpoint: https://journal-aleks-tech-2ffee88625.herokuapp.com/backend/dev
+#endpoint: https://journal-aleks-tech-2ffee88625.herokuapp.com/backend/dev
 endpoint: https://journal-aleks-tech-2ffee88625.herokuapp.com/backend/dev
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
